--- a/texte/Mitglieder/index.html
+++ b/texte/Mitglieder/index.html
@@ -26,20 +26,26 @@
     const auth = getAuth();
     const db = getFirestore();
 
-    // Funktion zum Laden des Textes aus Firestore
-    async function loadText() {
-      const textRef = doc(db, "texte", "mitglieder", "inhalt"); // Dokument "mitglieder" in der Sammlung "texte"
-      const docSnap = await getDoc(textRef);
-      const textElement = document.getElementById("editable-text");
+async function loadText() {
+  const textRef = doc(db, "texte", "mitglieder"); // Das Dokument, das den Text enthält
+  try {
+    const docSnap = await getDoc(textRef);
+    const textElement = document.getElementById("editable-text");
 
-      if (docSnap.exists()) {
-        // Den Text aus dem Feld "inhalt" des Dokuments holen
-        textElement.innerText = docSnap.data().inhalt || "Kein Text vorhanden";
-      } else {
-        console.log("Kein Text gefunden");
-        textElement.innerText = "Kein Text gefunden";
-      }
+    if (docSnap.exists()) {
+      const text = docSnap.data().inhalt || "Kein Text vorhanden";
+      console.log("Text geladen:", text); // Debugging: Text anzeigen
+      textElement.innerText = text;
+    } else {
+      console.log("Kein Text gefunden in Firestore");
+      textElement.innerText = "Kein Text gefunden";
     }
+  } catch (error) {
+    console.error("Fehler beim Abrufen des Textes:", error);
+    document.getElementById("editable-text").innerText = "Fehler beim Laden des Textes.";
+  }
+}
+    
 
     // Text immer sichtbar, aber Editieren nur für eingeloggte Nutzer
     onAuthStateChanged(auth, (user) => {
