--- a/texte/Mitglieder.html
+++ b/texte/Mitglieder.html
@@ -25,7 +25,6 @@
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js";
     import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-firestore.js";
 
-    // Firebase-Konfiguration
     const firebaseConfig = {
       apiKey: "AIzaSyA2foolYwDeoTrfkynuhJu44lb5qDXHFwg",
       authDomain: "auth-adfwc.firebaseapp.com",
@@ -35,14 +34,13 @@
       appId: "1:221420792742:web:f75515331cb4c5b4603d67"
     };
 
-    // Initialisierung
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
     // Text anzeigen
-    async function loadText(userId) {
-      const textRef = doc(db, "texte", userId, "mitglieder"); // Hier holen wir den Text des Benutzers
+    async function loadText() {
+      const textRef = doc(db, "texte", "mitglieder"); // Hier holen wir den globalen Text
       try {
         const docSnap = await getDoc(textRef);
         if (docSnap.exists()) {
@@ -61,10 +59,8 @@
       if (user) {
         // Wenn eingeloggt, Bearbeiten-Link anzeigen
         document.getElementById("edit-link").style.display = "block";
-        loadText(user.uid); // Benutzer-spezifischen Text laden
-      } else {
-        loadText('global'); // Den globalen Text laden, wenn nicht eingeloggt
       }
+      loadText(); // globalen Text anzeigen
     });
   </script>
 </body>
